--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example_uploader",
-  "version": "0.1.0",
-  "private": true,
+  "name": "uploader-image",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -34,5 +34,15 @@
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "files": [
+    "lib",
+    "src", 
+    "types", 
+    "README.md"
+  ],
+  "engines": {
+    "node": "16.x.x",
+    "npm": "8.13.x"
+   }  
 }
